samples/_failures_safe/1761662020_a2739f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1880ac1e.c: In function ‘main’:
./samples/SAFE/__tmp_1880ac1e.c:144:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  144 |     size_t num
      |     ^~~~~~
./samples/SAFE/__tmp_1880ac1e.c:144:5: error: expected declaration or statement at end of input
